--- a/templates/_layout/index.html
+++ b/templates/_layout/index.html
@@ -27,13 +27,13 @@
     </div>
     <div class="col-sm-3">
       <div class="panel">
-        <h3><a ui-sref="locations-map" class="icon satelite">Countries</span></a></h3>  
+        <h3><a ui-sref="locations-map" class="icon globe">Countries</span></a></h3>  
         <p>Get detailed overview of projects </p> 
       </div>
     </div>
     <div class="col-sm-3">
       <div class="panel">
-        <h3><a ui-sref="sector-list" class="icon globe">Sectors</span></a></h3>  
+        <h3><a ui-sref="sector-list" class="icon medal">Sectors</span></a></h3>  
         <p>See which sectors we work in.</p> 
       </div>
     </div>
@@ -73,13 +73,16 @@
   </div>
 </div>
 
-<div class="row visualize">
-    <div class="col-sm-4">
-    </div>
-    <div class="col-sm-4">
-    </div>
-    <div class="col-sm-4">
-    </div>
+<div class="container">
+  <div class="row visualize">
+      <div class="col-sm-4 text-center">
+        <h4>Budget per programme</h4>
+      </div>
+      <div class="col-sm-4 text-center">
+        <h4>Budget per country</h4>
+      </div>
+      <div class="col-sm-4 text-center">
+        <h4>Budget per sector</h4>
+      </div>
+  </div>
 </div>
-
-
