--- a/templates/_layout/index.html
+++ b/templates/_layout/index.html
@@ -33,7 +33,7 @@
     </div>
     <div class="col-sm-3">
       <div class="panel">
-        <h3><a ui-sref="sector-list" class="icon medal">Sectors</span></a></h3>  
+        <h3><a ui-sref="sectors" class="icon medal">Sectors</span></a></h3>  
         <p>See which sectors we work in.</p> 
       </div>
     </div>
