--- a/templates/countries/country-list.html
+++ b/templates/countries/country-list.html
@@ -30,7 +30,7 @@
 
 <div class="row" infinite-scroll='vm.nextPage()' infinite-scroll-disabled='vm.busy' infinite-scroll-distance='1'>
     <div class="activity-list-item col-sm-12">
-        <div class="panel no-margin-bottom">
+        <div class="panel no-margin-bottom header">
             <div class="row">
                 <div class="col-sm-2">
                     &nbsp;
