--- a/templates/sectors/sector-view-detail.html
+++ b/templates/sectors/sector-view-detail.html
@@ -33,7 +33,7 @@
                         <tbody>
                             <tr>
                                 <td>
-                                    Total programme expenditure
+                                    Total country expenditure
                                 </td>
                                 <td>
                                     {{budget.budget__value | shortcurrency :'€'}}
@@ -41,7 +41,7 @@
                             </tr>
                             <tr>
                                 <td>
-                                    Total programme budget
+                                    Total country budget
                                 </td>
                                 <td>
                                     {{budget.budget__value | shortcurrency :'€'}}
