--- a/templates/regions/region-list.html
+++ b/templates/regions/region-list.html
@@ -81,7 +81,7 @@
 <div ng-show="vm.regions.length != 0">
     <div class="row">
         <div class="col-xs-12 activity-list-item ">
-            <div class="panel no-margin-bottom">
+            <div class="panel no-margin-bottom header">
                 <div class="row">
                     <div class="activity-list-item col-xs-11 col-xs-offset-1">
                         <div class="row">
