--- a/templates/sectors/sectors-list.html
+++ b/templates/sectors/sectors-list.html
@@ -79,7 +79,7 @@
 <div ng-show="vm.sectors.length != 0">
     <div class="row">
         <div class="col-xs-12 activity-list-item ">
-            <div class="panel no-margin-bottom">
+            <div class="panel no-margin-bottom header">
                 <div class="row">
                     <div class="activity-list-item col-xs-11 col-xs-offset-1">
                         <div class="row">
