work in progress

--- a/templates/_layout/index.html
+++ b/templates/_layout/index.html
@@ -10,9 +10,13 @@
     </div>
   </div>
   <div class="col-md-4 col-md-offset-4">
-    <div class="panel">
+    <div class="panel right">
       <h1>About this portal</h1>
-      <p>This portal visualizes the IATI data on official development aid projects and programmes executed by the Netherlands Enterprise Agency.</p>
+      <p><a href="mailto:iati@rvo.nl"><i class="fa fa-envelope"></i>iati@rvo.nl</a></p>
+      <p><a href="https://twitter.com/AiddataRVO" target="_blank"><i class="icon twitter"></i>@AiddataRVO</a></p>
+      <p><a href=""><i class="icon download"></i>Netherlands Enterprise Agency IATI activity file</a></p>
+      <p>IATI dataset last updated: XX</p>
+</p>
     </div>
   </div>
 </div>
@@ -58,14 +62,9 @@
   <div class="col-sm-12">
     <div class=" front-callout">
       <div class="row">
-        <div class="col-sm-6">
+        <div class="col-sm-12">
           <div class="panel">
-            Total Budget on development aid projects and programs executed  by the Netherlands Enterprise Agency since 2009.  
-          </div>
-        </div>
-        <div class="col-sm-6">
-          <div class="panel big">
-            € 671.46 mln
+            Insight into XX development aid projcts committed by the Netherlands Enterprise Agency, in XX countries, with a total budget of XX. Projects unders construction as of commissioned since January 2015.
           </div>
         </div>
       </div>
