--- a/templates/_layout/navbar.html
+++ b/templates/_layout/navbar.html
@@ -33,7 +33,7 @@
           ng-class="{'active': vm.stateName == 'search'}"><a ng-class="{'active': vm.stateName == 'search'}"  ui-sref="search">Search</a></li>
 
         <li 
-          ng-class="{'active': vm.stateName == 'about'}"><a ng-class="{'active': vm.stateName == 'about'}"  ui-sref="about">About</a></li>
+          ng-class="{'active': vm.stateName == 'about'}"><a ng-class="{'active': vm.stateName == 'about'}"  ui-sref="about">About RVO data</a></li>
 
           
 </nav><!-- /.branding -->
