--- a/templates/countries/country-list.html
+++ b/templates/countries/country-list.html
@@ -1,3 +1,17 @@
+<div class="row">
+  <div class="col-sm-12">
+    <div class="list front-callout">
+      <div class="row">
+        <div class="col-sm-12">
+          <div class="panel">
+            With XX programmes, XX projects within XX sectors in {{vm.totalCountries}} countries.
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
 <div class="container list-view-wrapper">
      <div class="row">
         <div class="col-md-12">
@@ -28,7 +42,28 @@
     </div>
 </div>
 
-<div class="row" infinite-scroll='vm.nextPage()' infinite-scroll-disabled='vm.busy' infinite-scroll-distance='1'>
+<table infinite-scroll='vm.nextPage()' infinite-scroll-disabled='vm.busy' infinite-scroll-distance='1' class="table list-overview">
+    <thead>
+        <tr>
+            <th>Country</th>
+            <th>Number of projects</th>
+            <th>Number of programmes</th>
+            <th>Total budget</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr
+            ng-show="vm.countries.length != 0"
+            ng-repeat="item in vm.countries">
+            <td><a ui-sref="country({ country_id: item.country_id })"><span class="flag-icon flag-icon-{{item.country_id | lowercase }} "></span>{{ item.name }}</a></td>
+            <td>{{item.activity_count}}</td>
+            <td></td>
+            <td>{{item.total_disbursements  | shortcurrency :'€'}}</td>
+        </tr>
+    </tbody>
+</table>
+
+<!-- <div class="row" infinite-scroll='vm.nextPage()' infinite-scroll-disabled='vm.busy' infinite-scroll-distance='1'>
     <div class="activity-list-item col-sm-12">
         <div class="panel no-margin-bottom header">
             <div class="row">
@@ -53,7 +88,7 @@
         <div class="panel country">
             <div class="row">
                 <div class="col-sm-2">
-                    <div class="image" style=""> <!--background-image:'url();' hier definieren -->
+                    <div class="image" style="">
                     </div>
                 </div>
                 <div class="col-sm-5">
@@ -68,4 +103,4 @@
             </div>
         </div>
     </div>
-</div>
+</div> -->
