--- a/templates/countries/country-view-detail.html
+++ b/templates/countries/country-view-detail.html
@@ -13,7 +13,7 @@
 
     <div class="content-offset" ng-show="vm.selectedTab == 'samenvatting'">
 
-        <div class="container extra">
+        <div class="container extra detailview">
 
             <div class="row">
                 <div class="col-md-8">
@@ -58,26 +58,11 @@
                             </tr>
                         </tbody>
                     </table>
-                    <div class="graph">
+<!--                     <div class="graph">
                         <financials-line-chart has-to-contain="countries__in"></financials-line-chart>
-                    </div>
+                    </div> -->
                 </div>
                 <div class="col-md-4">
-                    <div class="panel lightblue share">
-                        <h3>Export & share</h3>
-                        <hr>
-                        <p class="no-margin-bottom">Download the project data</p>
-                        <p>
-                            <a ng-click="vm.download('json')"><i class="icon download"></i>JSON</a>
-                        </p>
-                        <p class="no-margin-bottom">Share this project</p>
-                        <p class="two-columns">
-                            <a target="_blank" ng-href="http://twitter.com/home?status={{vm.shareDescription}}"><i class="icon twitter"></i>Twitter</a>
-                            <a target="_blank" ng-href="http://www.facebook.com/sharer/sharer.php?s=100&p[url]={{vm.pageUrl}}"><i class="icon facebook"></i>Facebook</a>
-                            <a target="_blank" ng-href="http://www.linkedin.com/shareArticle?mini=true&url={{vm.pageUrl}}&title={{vm.shareDescription}}"><i class="icon linkedin"></i>LinkedIn</a>
-                            <a href=""><i class="icon email"></i>Email</a>
-                        </p>
-                    </div>
                     <div class="panel lightblue">
                         <h3>Related videos</h3>
                         <hr>
@@ -99,6 +84,25 @@
                                     <i class="glyphicon glyphicon-download-alt"></i>{{document.title}}
                                 </a>
                             </p>
+                    </div>
+                    <div class="panel lightblue with-table share">
+                        <h3>Export & share</h3>
+                        <hr>
+                        <table class="no-format">
+                            <tr>
+                                <td width="130">Download:</td>
+                                <td><a ng-click="vm.download('json')"><i class="icon download"></i>JSON</a></td>
+                            </tr>
+                            <tr>
+                                <td>Share:</td>
+                                <td>
+                                    <a target="_blank" ng-href="http://twitter.com/home?status={{vm.shareDescription}}"><i class="icon twitter"></i></a>
+                                    <a target="_blank" ng-href="http://www.facebook.com/sharer/sharer.php?s=100&p[url]={{vm.pageUrl}}"><i class="icon facebook"></i></a>
+                                    <a target="_blank" ng-href="http://www.linkedin.com/shareArticle?mini=true&url={{vm.pageUrl}}&title={{vm.shareDescription}}"><i class="icon linkedin"></i></a>
+                                    <a href=""><i class="icon email"></i></a>
+                                </td>
+                            </tr>
+                        </table>
                     </div>
                     <div class="panel lightblue">
                         <h3>Embed code</h3>
