--- a/templates/sectors/sectors-list.html
+++ b/templates/sectors/sectors-list.html
@@ -1,26 +1,18 @@
 <script type="text/ng-template" id="tree">
-    <div ng-if="item.children" class="panel parent collapsed">
-        <div class="row">
-            <div class="col-xs-1">
+    <tr ng-if="item.children" class="panel parent collapsed">
+            <td>
                 <span class="expandme" ng-click="vm.toggleHideChildren($event)"></span>
-            </div>
-            <div class="col-xs-11">
-                <div class="row">
-                    <div class="col-sm-6">
-                        <h3 class="no-margin">
-                            <a ui-sref="sector({ sector_id: item.sector_id })">{{ item.name }}</a>
-                        </h3>
-                    </div>
-                    <div class="col-sm-3">
-                        <h3 class="no-margin">{{item.total_disbursements  | shortcurrency :'€'}}</h3>
-                    </div>
-                    <div class="col-sm-3">
-                        <h3 class="no-margin">{{item.activity_count || 0}} projects</h3>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+            </td>
+            <td>
+                <a ui-sref="sector({ sector_id: item.sector_id })">{{ item.name }}</a>
+            </td>
+            <td>
+                {{item.total_disbursements  | shortcurrency :'€'}}
+            </td>
+            <td>
+                {{item.activity_count || 0}}
+            </td>
+    </tr>
 
     <div ng-if="!item.children" class="panel">
         <div class="row ">
@@ -76,30 +68,23 @@
         </div>
     </div>
 </div>
-<div ng-show="vm.sectors.length != 0">
-    <div class="row">
-        <div class="col-xs-12 activity-list-item ">
-            <div class="panel no-margin-bottom header">
-                <div class="row">
-                    <div class="activity-list-item col-xs-11 col-xs-offset-1">
-                        <div class="row">
-                            <div class="col-sm-6">
-                                <h4 class="no-margin">Sector</h4>
-                            </div>
-                            <div class="col-sm-3">
-                                <h4 class="no-margin">Total budget</h4>
-                            </div>
-                            <div class="col-sm-3">
-                                <h4 class="no-margin">Total projects</h4>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+
+<table class="table list-overview" ng-show="vm.sectors.length != 0">
+    <thead>
+        <tr>
+            <th><!--placeholder for exoander icon--></th>
+            <th>Sector</th>
+            <th>Total budget</th>
+            <th>Total projects</th>
+        </tr>
+    </thead>
+
+    <tbody>
+
+        <div class="sectors activity-list-item" 
+            ng-repeat="item in vm.sectors"
+            ng-include="'tree'">
         </div>
-    </div>
-    <div class="sectors activity-list-item" 
-        ng-repeat="item in vm.sectors"
-        ng-include="'tree'">
-    </div>
-</div>
+
+    </tbody>
+</table>
